@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: extract_list.c,v 1.117.2.2 2006/12/22 15:10:26 martinea Exp $
+ * $Id: extract_list.c,v 1.117.2.3 2007/02/21 22:10:16 martinea Exp $
  *
  * implements the "extract" command in amrecover
  */
@@ -736,7 +736,6 @@ add_file(
 {
     DIR_ITEM *ditem, lditem;
     char *path_on_disk = NULL;
-    char *path_on_disk_slash = NULL;
     char *cmd = NULL;
     char *err = NULL;
     int i;
@@ -786,8 +785,6 @@ add_file(
 	amfree(clean_disk_path);
     }
 
-    path_on_disk_slash = stralloc2(path_on_disk, "/");
-
     dbprintf(("add_file: Converted path=\"%s\" to path_on_disk=\"%s\"\n",
 	      regex, path_on_disk));
 
@@ -799,8 +796,7 @@ add_file(
 	quoted = quote_string(ditem->path);
 	dbprintf(("add_file: Pondering ditem->path=%s\n", quoted));
 	amfree(quoted);
-	if (match(path_on_disk, ditem->path)
-	    || match(path_on_disk_slash, ditem->path))
+	if (match(path_on_disk, ditem->path))
 	{
 	    found_one = 1;
 	    j = (ssize_t)strlen(ditem->path);
@@ -817,7 +813,6 @@ add_file(
 		    amfree(cmd);
 		    amfree(ditem_path);
 		    amfree(path_on_disk);
-		    amfree(path_on_disk_slash);
 		    exit(1);
 		}
 		amfree(cmd);
@@ -826,13 +821,11 @@ add_file(
 		if ((i = get_reply_line()) == -1) {
 		    amfree(ditem_path);
 		    amfree(path_on_disk);
-		    amfree(path_on_disk_slash);
 		    exit(1);
 		}
 		if(i==0) {		/* assume something wrong */
 		    amfree(ditem_path);
 		    amfree(path_on_disk);
-		    amfree(path_on_disk_slash);
 		    l = reply_line();
 		    printf("%s\n", l);
 		    return;
@@ -846,7 +839,6 @@ add_file(
 		    if (i == -1) {
 			amfree(ditem_path);
 		        amfree(path_on_disk);
-		        amfree(path_on_disk_slash);
 			exit(1);
 		    }
 		    if(err) {
@@ -983,7 +975,6 @@ add_file(
     amfree(cmd);
     amfree(ditem_path);
     amfree(path_on_disk);
-    amfree(path_on_disk_slash);
 
     amfree(lditem.path);
     amfree(lditem.date);
@@ -1054,7 +1045,6 @@ delete_file(
 {
     DIR_ITEM *ditem, lditem;
     char *path_on_disk = NULL;
-    char *path_on_disk_slash = NULL;
     char *cmd = NULL;
     char *err = NULL;
     int i;
@@ -1110,8 +1100,6 @@ delete_file(
 	amfree(clean_disk_path);
     }
 
-    path_on_disk_slash = stralloc2(path_on_disk, "/");
-
     dbprintf(("delete_file: Converted path=\"%s\" to path_on_disk=\"%s\"\n",
 	      regex, path_on_disk));
     found_one = 0;
@@ -1120,8 +1108,7 @@ delete_file(
 	quoted = quote_string(ditem->path);
 	dbprintf(("delete_file: Pondering ditem->path=%s\n", quoted));
 	amfree(quoted);
-	if (match(path_on_disk, ditem->path)
-	    || match(path_on_disk_slash, ditem->path))
+	if (match(path_on_disk, ditem->path))
 	{
 	    found_one = 1;
 	    j = (ssize_t)strlen(ditem->path);
@@ -1138,7 +1125,6 @@ delete_file(
 		    amfree(cmd);
 		    amfree(ditem_path);
 		    amfree(path_on_disk);
-		    amfree(path_on_disk_slash);
 		    exit(1);
 		}
 		amfree(cmd);
@@ -1146,14 +1132,12 @@ delete_file(
 		if ((i = get_reply_line()) == -1) {
 		    amfree(ditem_path);
 		    amfree(path_on_disk);
-		    amfree(path_on_disk_slash);
 		    exit(1);
 		}
 		if(i==0)		/* assume something wrong */
 		{
 		    amfree(ditem_path);
 		    amfree(path_on_disk);
-		    amfree(path_on_disk_slash);
 		    l = reply_line();
 		    printf("%s\n", l);
 		    return;
@@ -1168,7 +1152,6 @@ delete_file(
 		    if (i == -1) {
 			amfree(ditem_path);
 			amfree(path_on_disk);
-			amfree(path_on_disk_slash);
 			exit(1);
 		    }
 		    if(err) {
@@ -1297,7 +1280,6 @@ delete_file(
     amfree(cmd);
     amfree(ditem_path);
     amfree(path_on_disk);
-    amfree(path_on_disk_slash);
 
     if(! found_one) {
 	printf("File %s doesn't exist in directory\n", path);
