@@ -1,3 +1,6 @@
+2007-02-21  Jean-Louis Martineau <martineau@zmanda.com>
+	* recover-src/extract_list.c: Remove match for path_on_disk_slash.
+
 2007-02-20  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/taper.c: Set splitsize to 0 if no data in file.
 	* server-src/amflush.c: Don't send FLUSH request if no data in file.
